syntax = "proto3";

package auth;

option go_package = "auth.v1;authv1";

service Auth {
    rpc SaveUser (SaveUserRequest) returns (SaveUserResponse);
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse);
    rpc Parse (ParseRequest) returns (ParseResponse);
    rpc Refresh (RefreshRequest) returns (RefreshResponse);
}

message SaveUserRequest {
    string user_name = 1;
    string email = 2;
    string password = 3;
}

message SaveUserResponse {
    int64 user_id = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    int64 user_id = 1;
    string user_name = 2;
    string access_token =3;
    string refresh_token=4;
}

message ParseRequest {
    string access_token = 1;
}

message ParseResponse {
    int64 user_id = 1;
    string user_name = 2;
}

message RefreshRequest {
    string refresh_token = 1;
}

message RefreshResponse{
    int64 user_id = 1;
    string user_name = 2;
    string access_token =3;
    string refresh_token=4;
}
